--- a/index.html
+++ b/index.html
@@ -38,13 +38,15 @@
     <section class="section-2">
         <div class="section-2-content">
             <h2 class="section-2-h2">ЧЕМ Я ЗАНИМАЮСЬ?</h2>
+
             <div class="section-2-blocks">
                 <div class="section-2-block">
                     <div class="section-2-block-content">
                         <img src="./img/Edit-Square.png" alt="" class="section-2-img">
-                        <p>Верстка современных и красивых  веб-страниц</p>
+                        <p>Вёрстка современных и красивых  веб-страниц</p>
                     </div>
                 </div>
+
                 <div class="section-2-block">
                     <div class="section-2-block-content">
                         <img src="./img/Category.png" alt="" class="section-2-img">
