add animation button, img

--- a/index.html
+++ b/index.html
@@ -70,14 +70,12 @@
                 <!-- Первый блок (2, лево, право)-->
                 <div class="section-3-block1">
                     <div class="section-3-block-img">
-                        <img src="./img/section-1.png" alt="">
+                        <img src="./img/section-01.png" alt="">
                     </div>
                     <div class="section-3-block-text">
-                        <div class="sec-3-block-title">Лендинг для Малого бизнеса</div>
-                        <div class="sec-3-block-text">Сайт был создан всего за 3 часа 42 минуты. 
-                            Добавлена анимация каждого элемента. 
-                            Вручную выставлялась оптимизация под разные мобильные устройства. </div>
-                        <div class="sec-3-block-button"><button>ПЕРЕЙТИ</button></div>
+                        <div class="sec-3-block-title">Tesla Roadster</div>
+                        <div class="sec-3-block-text">Landing Page для компании Tesla и их продукта Tesla Roadster. Был сделан адаптив под разные мобильные устройства. Посмотрите сами!</div>
+                        <div class="sec-3-block-button"><a href="https://zhukov531.github.io/second_repo/"><button>ПЕРЕЙТИ</button></a></div>
                     </div>
                 </div>
 
