--- a/index.html
+++ b/index.html
@@ -21,9 +21,7 @@
 
     <title>Zhukov Yuriy</title>
 </head>
-    <script type="text/javascript">
-        var _acic={dataProvider:10};(function(){var e=document.createElement("script");e.type="text/javascript";e.async=true;e.src="https://www.acint.net/aci.js";var t=document.getElementsByTagName("script")[0];t.parentNode.insertBefore(e,t)})()
-    </script>
+
 <body>
     <section class="hero">
         <div class="section-content">
@@ -96,6 +94,29 @@
                         <img src="./img/section-2.png" alt="">
                     </div>
                 </div>
+
+                <div class="section-3-block1">
+                    <div class="section-3-block-img">
+                        <img src="./img/section-3.png" alt="">
+                    </div>
+                    <div class="section-3-block-text">
+                        <div class="sec-3-block-title">Lasles VPN</div>
+                        <div class="sec-3-block-text">Landing Page для VPN-сервиса LaslesVPN. Был сделан адаптив под мобильные устройства.</div>
+                        <div class="sec-3-block-button"><a href="https://zhukov531.github.io/second_repo/"><button>ПЕРЕЙТИ</button></a></div>
+                    </div>
+                </div>
+
+                <div class="section-3-block2">
+                    <div class="section-3-block-text2">
+                        <div class="sec-3-block-title">Tesla Model S Plaid</div>
+                        <div class="sec-3-block-text">Сайт был создан с анимацией и полным адаптивом под мобильные устройства. </div>
+                        <div class="sec-3-block-button2"><button>ПЕРЕЙТИ</button></div>
+                    </div>
+                    <div class="section-3-block-img">
+                        <img src="./img/Section-4.png" alt="">
+                    </div>
+                </div>
+
             </div>
         </div>
     </section>
