--- a/index.html
+++ b/index.html
@@ -83,16 +83,17 @@
 
 
                 <div class="section-3-block2">
+                    <div class="section-3-block-img">
+                        <img src="./img/section-2.png" alt="">
+                    </div>
                     <div class="section-3-block-text2">
                         <div class="sec-3-block-title">Лендинг для Малого бизнеса</div>
                         <div class="sec-3-block-text">Сайт был создан всего за 3 часа 42 минуты. 
                             Добавлена анимация каждого элемента. 
                             Вручную выставлялась оптимизация под разные мобильные устройства.</div>
-                        <div class="sec-3-block-button2"><button>ПЕРЕЙТИ</button></div>
+                        <div class="sec-3-block-button2"><button href="">ПЕРЕЙТИ</button></div>
                     </div>
-                    <div class="section-3-block-img">
-                        <img src="./img/section-2.png" alt="">
-                    </div>
+                    
                 </div>
 
                 <div class="section-3-block1">
@@ -102,7 +103,7 @@
                     <div class="section-3-block-text">
                         <div class="sec-3-block-title">Lasles VPN</div>
                         <div class="sec-3-block-text">Landing Page для VPN-сервиса LaslesVPN. Был сделан адаптив под мобильные устройства.</div>
-                        <div class="sec-3-block-button"><a href="https://zhukov531.github.io/second_repo/"><button>ПЕРЕЙТИ</button></a></div>
+                        <div class="sec-3-block-button"><a href="https://zhukov531.github.io/LaslesVPN/"><button>ПЕРЕЙТИ</button></a></div>
                     </div>
                 </div>
 
