--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                     <div class="section-3-block-text2">
                         <div class="sec-3-block-title">Tesla Model S Plaid</div>
                         <div class="sec-3-block-text">Сайт был создан с анимацией и полным адаптивом под мобильные устройства. </div>
-                        <div class="sec-3-block-button2"><button>ПЕРЕЙТИ</button></div>
+                        <div class="sec-3-block-button2"><button href="https://zhukov531.github.io/tesla_model_s_plaid/">ПЕРЕЙТИ</button><div>
                     </div>
                     <div class="section-3-block-img">
                         <img src="./img/Section-4.png" alt="">
