--- a/index.html
+++ b/index.html
@@ -84,14 +84,14 @@
 
                 <div class="section-3-block2">
                     <div class="section-3-block-img">
-                        <img src="./img/section-2.png" alt="">
+                        <img src="./img/light.png" alt="">
                     </div>
                     <div class="section-3-block-text2">
                         <div class="sec-3-block-title">Лендинг для Малого бизнеса</div>
                         <div class="sec-3-block-text">Сайт был создан всего за 3 часа 42 минуты. 
                             Добавлена анимация каждого элемента. 
                             Вручную выставлялась оптимизация под разные мобильные устройства.</div>
-                        <div class="sec-3-block-button2"><button href="">ПЕРЕЙТИ</button></div>
+                        <div class="sec-3-block-button2"><button href="https://zhukov531.github.io/light/">ПЕРЕЙТИ</button></div>
                     </div>
                     
                 </div>
