--- a/index.html
+++ b/index.html
@@ -63,64 +63,77 @@
             </div>
         </div>
     </section>
-
-    <section class="section-3">
-        <div class="section-3-content">
-            <h2 class="section-3-title">ПРИМЕРЫ РАБОТ</h2>
+<section>
+    <div class="section-3-content">
+        <div class="section-3-title">
+            <h1 class="section-3-title-h1">ПРИМЕРЫ РАБОТ</h1>
+        </div>
+        <div class="section-3-blocks-1">
             <div class="section-3-blocks">
-                <!-- Первый блок (2, лево, право)-->
-                <div class="section-3-block1">
-                    <div class="section-3-block-img">
-                        <img src="./img/section-01.png" alt="">
-                    </div>
-                    <div class="section-3-block-text">
-                        <div class="sec-3-block-title">Tesla Roadster</div>
-                        <div class="sec-3-block-text">Landing Page для компании Tesla и их продукта Tesla Roadster. Был сделан адаптив под разные мобильные устройства. Посмотрите сами!</div>
-                        <div class="sec-3-block-button"><a href="https://zhukov531.github.io/second_repo/"><button>ПЕРЕЙТИ</button></a></div>
-                    </div>
-                </div>
-
-
-
-                <div class="section-3-block2">
-                    <div class="section-3-block-img">
-                        <img src="./img/light.png" alt="">
-                    </div>
-                    <div class="section-3-block-text2">
-                        <div class="sec-3-block-title">Лендинг для Малого бизнеса</div>
-                        <div class="sec-3-block-text">Сайт был создан всего за 3 часа 42 минуты. 
-                            Добавлена анимация каждого элемента. 
-                            Вручную выставлялась оптимизация под разные мобильные устройства.</div>
-                        <div class="sec-3-block-button2"><button href="https://zhukov531.github.io/light/">ПЕРЕЙТИ</button></div>
-                    </div>
-                    
-                </div>
-
-                <div class="section-3-block1">
-                    <div class="section-3-block-img">
-                        <img src="./img/section-3.png" alt="">
-                    </div>
-                    <div class="section-3-block-text">
-                        <div class="sec-3-block-title">Lasles VPN</div>
-                        <div class="sec-3-block-text">Landing Page для VPN-сервиса LaslesVPN. Был сделан адаптив под мобильные устройства.</div>
-                        <div class="sec-3-block-button"><a href="https://zhukov531.github.io/LaslesVPN/"><button>ПЕРЕЙТИ</button></a></div>
+                <div class="section-3-block-solo">
+                    <img src="./img/section-01.png" alt="" class="section-3-img">
+                    <div class="block-solo-text">
+                        <h2 class="block-solo-h2">Tesla Roadster</h2>
+                        <p class="block-solo-p">
+                            Landing Page для компании Tesla и их продукта Tesla Roadster. Был сделан адаптив под разные
+                            мобильные устройства.
+                            Посмотрите сами!
+                        </p>
+                        <button class="block-solo-btn">Перейти</button>
                     </div>
                 </div>
+            </div>
 
-                <div class="section-3-block2">
-                    <div class="section-3-block-text2">
-                        <div class="sec-3-block-title">Tesla Model S Plaid</div>
-                        <div class="sec-3-block-text">Сайт был создан с анимацией и полным адаптивом под мобильные устройства. </div>
-                        <div class="sec-3-block-button2"><button href="https://zhukov531.github.io/tesla_model_s_plaid/">ПЕРЕЙТИ</button><div>
-                    </div>
-                    <div class="section-3-block-img">
-                        <img src="./img/Section-4.png" alt="">
+            <div class="section-3-blocks">
+                <div class="section-3-block-solo">
+                    <img src="./img/light.png" alt="" class="section-3-img">
+                    <div class="block-solo-text">
+                        <h2 class="block-solo-h2">Light</h2>
+                        <p class="block-solo-p">
+                            Landing Page для компании Tesla и их продукта Tesla Roadster. Был сделан адаптив под разные
+                            мобильные
+                            устройства.
+                            Посмотрите сами!
+                        </p>
+                        <button class="block-solo-btn">Перейти</button>
                     </div>
                 </div>
+            </div>
 
+            <div class="section-3-blocks">
+                <div class="section-3-block-solo">
+                    <img src="./img/section-3.png" alt="" class="section-3-img">
+                    <div class="block-solo-text">
+                        <h2 class="block-solo-h2">LaslesVPN</h2>
+                        <p class="block-solo-p">
+                            Landing Page для компании Tesla и их продукта Tesla Roadster. Был сделан адаптив под разные
+                            мобильные
+                            устройства.
+                            Посмотрите сами!
+                        </p>
+                        <button class="block-solo-btn">Перейти</button>
+                    </div>
+                </div>
+            </div>
+
+            <div class="section-3-blocks">
+                <div class="section-3-block-solo">
+                    <img src="./img/Section-4.png" alt="" class="section-3-img">
+                    <div class="block-solo-text">
+                        <h2 class="block-solo-h2">Tesla Model S Plaid</h2>
+                        <p class="block-solo-p">
+                            Landing Page для компании Tesla и их продукта Tesla Roadster. Был сделан адаптив под разные
+                            мобильные
+                            устройства.
+                            Посмотрите сами!
+                        </p>
+                        <button class="block-solo-btn">Перейти</button>
+                    </div>
+                </div>
             </div>
         </div>
-    </section>
+    </div>
+</section>
 
     <footer class="footer">
         <div class="footer-content">
