--- a/index.html
+++ b/index.html
@@ -79,7 +79,9 @@
                             мобильные устройства.
                             Посмотрите сами!
                         </p>
+                        <a href="https://zhukov531.github.io/second_repo/">
                         <button class="block-solo-btn">Перейти</button>
+                        </a>
                     </div>
                 </div>
             </div>
@@ -90,12 +92,13 @@
                     <div class="block-solo-text">
                         <h2 class="block-solo-h2">Light</h2>
                         <p class="block-solo-p">
-                            Landing Page для компании Tesla и их продукта Tesla Roadster. Был сделан адаптив под разные
+                            Landing Page для продающего товара. Был сделан адаптив под разные
                             мобильные
                             устройства.
-                            Посмотрите сами!
                         </p>
+                        <a href="https://zhukov531.github.io/light/">
                         <button class="block-solo-btn">Перейти</button>
+                        </a>
                     </div>
                 </div>
             </div>
@@ -106,12 +109,14 @@
                     <div class="block-solo-text">
                         <h2 class="block-solo-h2">LaslesVPN</h2>
                         <p class="block-solo-p">
-                            Landing Page для компании Tesla и их продукта Tesla Roadster. Был сделан адаптив под разные
+                            Landing Page для VPN Сервиса. Был сделан адаптив под разные
                             мобильные
                             устройства.
                             Посмотрите сами!
                         </p>
+                        <a href="https://zhukov531.github.io/LaslesVPN/">
                         <button class="block-solo-btn">Перейти</button>
+                        </a>
                     </div>
                 </div>
             </div>
@@ -127,7 +132,9 @@
                             устройства.
                             Посмотрите сами!
                         </p>
+                        <a href="https://zhukov531.github.io/tesla_model_s_plaid/">
                         <button class="block-solo-btn">Перейти</button>
+                        </a>
                     </div>
                 </div>
             </div>
