--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 </div>
             </div>
 
-            <div class="section-3-blocks">
+            <!-- <div class="section-3-blocks">
                 <div class="section-3-block-solo">
                     <img src="./img/light.png" alt="" class="section-3-img">
                     <div class="block-solo-text">
@@ -101,7 +101,7 @@
                         </a>
                     </div>
                 </div>
-            </div>
+            </div> -->
 
             <div class="section-3-blocks">
                 <div class="section-3-block-solo">
