--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                             мобильные устройства.
                             Посмотрите сами!
                         </p>
-                        <a href="https://zhukov531.github.io/second_repo/">
+                        <a target="_ blank" href="https://zhukov531.github.io/second_repo/">
                         <button class="block-solo-btn">Перейти</button>
                         </a>
                     </div>
@@ -114,7 +114,7 @@
                             устройства.
                             Посмотрите сами!
                         </p>
-                        <a href="https://zhukov531.github.io/LaslesVPN/">
+                        <a target="_ blank" href="https://zhukov531.github.io/LaslesVPN/">
                         <button class="block-solo-btn">Перейти</button>
                         </a>
                     </div>
@@ -123,16 +123,14 @@
 
             <div class="section-3-blocks">
                 <div class="section-3-block-solo">
-                    <img src="./img/Section-4.png" alt="" class="section-3-img">
+                    <img src="./img/lider.png" alt="" class="section-3-img">
                     <div class="block-solo-text">
-                        <h2 class="block-solo-h2">Tesla Model S Plaid</h2>
+                        <h2 class="block-solo-h2">Техосмотр Николино</h2>
                         <p class="block-solo-p">
-                            Landing Page для компании Tesla и их продукта Tesla Roadster. Был сделан адаптив под разные
-                            мобильные
-                            устройства.
+                            Landing Page для компании Lider и их услуги. Был сделан адаптив под мобильные устройства.
                             Посмотрите сами!
                         </p>
-                        <a href="https://zhukov531.github.io/tesla_model_s_plaid/">
+                        <a target="_ blank" href="https://tehosmotr-nikolino.ru">
                         <button class="block-solo-btn">Перейти</button>
                         </a>
                     </div>
