--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                     </div>
                 </div>
             </div> -->
-
+<!-- 
             <div class="section-3-blocks">
                 <div class="section-3-block-solo">
                     <img src="./img/section-3.png" alt="" class="section-3-img">
@@ -119,7 +119,7 @@
                         </a>
                     </div>
                 </div>
-            </div>
+            </div> -->
 
             <div class="section-3-blocks">
                 <div class="section-3-block-solo">
