--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
         <div class="footer-content">
             <div class="footer-links">
                 <div class="links1">
-                    <a href="" class="footer-img"><img src="./img/Iconly/Iconwa.png" alt=""></a>
+                    <a href="https://wa.me/79529712118" class="footer-img"><img src="./img/Iconly/Iconwa.png" alt=""></a>
                     <a href="" class="footer-img"><img src="./img/Iconly/Groupbe.png" alt=""></a>
                     <a href="" class="footer-img"><img src="./img/Iconly/ic24-instagram.png" alt=""></a>
                 </div>
