--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                 <div class="links3">
                     <a href="" class="footer-img"><img src="./img/Iconly/Icontw.png" alt=""></a>
                     <a href="" class="footer-img"><img src="./img/Iconly/Iconvk.png" alt=""></a>
-                    <a href="" class="footer-img"><img src="./img/Iconly/Icontg.png" alt=""></a>
+                    <a href="https://t.me/zhkv_yuriy" class="footer-img"><img src="./img/Iconly/Icontg.png" alt=""></a>
                 </div>
             </div>
             <h3 class="footer-name">ZHUKOV YURIY</h3>
