--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                     <a href="" class="footer-img"><img src="./img/Iconly/IconApple.png" alt=""></a></div>
                 <div class="links3">
                     <a href="https://twitter.com/zhukov_develop" class="footer-img"><img src="./img/Iconly/Icontw.png" alt=""></a>
-                    <a href="" class="footer-img"><img src="./img/Iconly/Iconvk.png" alt=""></a>
+                    <a href="https://vk.com/zhukov531" class="footer-img"><img src="./img/Iconly/Iconvk.png" alt=""></a>
                     <a href="https://t.me/zhkv_yuriy" class="footer-img"><img src="./img/Iconly/Icontg.png" alt=""></a>
                 </div>
             </div>
