--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                 <div class="links1">
                     <a href="https://wa.me/79529712118" class="footer-img"><img src="./img/Iconly/Iconwa.png" alt=""></a>
                     <a href="" class="footer-img"><img src="./img/Iconly/Groupbe.png" alt=""></a>
-                    <a href="" class="footer-img"><img src="./img/Iconly/ic24-instagram.png" alt=""></a>
+                    <a href="https://www.instagram.com/zhukoff_yuriy/" class="footer-img"><img src="./img/Iconly/ic24-instagram.png" alt=""></a>
                 </div>
                 <div class="links2">
                     <a href="" class="footer-img"><img src="./img/Iconly/IconApple.png" alt=""></a></div>
