--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
             <div class="footer-links">
                 <div class="links1">
                     <a href="https://wa.me/79529712118" class="footer-img"><img src="./img/Iconly/Iconwa.png" alt=""></a>
-                    <a href="" class="footer-img"><img src="./img/Iconly/Groupbe.png" alt=""></a>
+                    <a href="https://www.behance.net/zhukov_yuriy" class="footer-img"><img src="./img/Iconly/Groupbe.png" alt=""></a>
                     <a href="https://www.instagram.com/zhukoff_yuriy/" class="footer-img"><img src="./img/Iconly/ic24-instagram.png" alt=""></a>
                 </div>
                 <div class="links2">
