--- a/index.html
+++ b/index.html
@@ -144,16 +144,16 @@
         <div class="footer-content">
             <div class="footer-links">
                 <div class="links1">
-                    <a href="https://wa.me/79529712118" class="footer-img"><img src="./img/Iconly/Iconwa.png" alt=""></a>
-                    <a href="https://www.behance.net/zhukov_yuriy" class="footer-img"><img src="./img/Iconly/Groupbe.png" alt=""></a>
-                    <a href="https://www.instagram.com/zhukoff_yuriy/" class="footer-img"><img src="./img/Iconly/ic24-instagram.png" alt=""></a>
+                    <a target="_ blank" href="https://wa.me/79529712118" class="footer-img"><img src="./img/Iconly/Iconwa.png" alt=""></a>
+                    <a target="_ blank" href="https://www.behance.net/zhukov_yuriy" class="footer-img"><img src="./img/Iconly/Groupbe.png" alt=""></a>
+                    <a target="_ blank" href="https://www.instagram.com/zhukoff_yuriy/" class="footer-img"><img src="./img/Iconly/ic24-instagram.png" alt=""></a>
                 </div>
                 <div class="links2">
-                    <a href="" class="footer-img"><img src="./img/Iconly/IconApple.png" alt=""></a></div>
+                    <a target="_ blank" href="" class="footer-img"><img src="./img/Iconly/IconApple.png" alt=""></a></div>
                 <div class="links3">
-                    <a href="https://twitter.com/zhukov_develop" class="footer-img"><img src="./img/Iconly/Icontw.png" alt=""></a>
-                    <a href="https://vk.com/zhukov531" class="footer-img"><img src="./img/Iconly/Iconvk.png" alt=""></a>
-                    <a href="https://t.me/zhkv_yuriy" class="footer-img"><img src="./img/Iconly/Icontg.png" alt=""></a>
+                    <a target="_ blank" href="https://twitter.com/zhukov_develop" class="footer-img"><img src="./img/Iconly/Icontw.png" alt=""></a>
+                    <a target="_ blank" href="https://vk.com/zhukov531" class="footer-img"><img src="./img/Iconly/Iconvk.png" alt=""></a>
+                    <a target="_ blank" href="https://t.me/zhkv_yuriy" class="footer-img"><img src="./img/Iconly/Icontg.png" alt=""></a>
                 </div>
             </div>
             <h3 class="footer-name">ZHUKOV YURIY</h3>
