add logo in footer

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                     <a target="_ blank" href="https://www.instagram.com/zhukoff_yuriy/" class="footer-img"><img src="./img/Iconly/ic24-instagram.png" alt=""></a>
                 </div>
                 <div class="links2">
-                    <a target="_ blank" href="" class="footer-img"><img id="logo" src="./img/Logo1.1.1.png" alt=""></a></div>
+                    <a href="#" class="footer-img"><img id="logo" src="./img/Logo1.1.1.png" alt=""></a></div>
                 <div class="links3">
                     <a target="_ blank" href="https://twitter.com/zhukov_develop" class="footer-img"><img src="./img/Iconly/Icontw.png" alt=""></a>
                     <a target="_ blank" href="https://vk.com/zhukov531" class="footer-img"><img src="./img/Iconly/Iconvk.png" alt=""></a>
