--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
     <section class="hero">
         <div class="section-content">
             <div class="header">
-                <span>Zhukov Yuriy</span>
+                <a class="menu-link" href="#"><span>Zhukov Yuriy</span></a>
             </div>
             <div class="section-1-content">
                 <div class="section-1-text-1"> <span>СОЗДАМ САЙТ ДЛЯ ВАС И ВАШЕГО БИЗНЕСА</span></div>
-                <div class="section-1-text-2">Zhukov Yuriy</div>
+                <div class="section-1-text-2"> <span> Zhukov Yuriy</span></div>
                 <div class="section-1-text-3">Разработка сайтов</div>
             </div>
         </div>
@@ -149,14 +149,14 @@
                     <a target="_ blank" href="https://www.instagram.com/zhukoff_yuriy/" class="footer-img"><img src="./img/Iconly/ic24-instagram.png" alt=""></a>
                 </div>
                 <div class="links2">
-                    <a href="#" class="footer-img"><img id="logo" src="./img/Logo1.1.1.png" alt=""></a></div>
+                    
+                    <a href="#" class="footer-img"><h3 class="footer-name">ZHUKOV YURIY</h3></a></div>
                 <div class="links3">
                     <a target="_ blank" href="https://twitter.com/zhukov_develop" class="footer-img"><img src="./img/Iconly/Icontw.png" alt=""></a>
                     <a target="_ blank" href="https://vk.com/zhukov531" class="footer-img"><img src="./img/Iconly/Iconvk.png" alt=""></a>
                     <a target="_ blank" href="https://t.me/zhkv_yuriy" class="footer-img"><img src="./img/Iconly/Icontg.png" alt=""></a>
                 </div>
             </div>
-            <h3 class="footer-name">ZHUKOV YURIY</h3>
         </div>
     </footer>
 </body>
