--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                             Landing Page для компании Lider и их услуги. Был сделан адаптив под мобильные устройства.
                             Посмотрите сами!
                         </p>
-                        <a target="_ blank" href="https://tehosmotr-nikolino.ru">
+                        <a target="_ blank" href="https://zhukov531.github.io/LIDER/">
                         <button class="block-solo-btn">Перейти</button>
                         </a>
                     </div>
