--- a/index.html
+++ b/index.html
@@ -29,16 +29,16 @@
                 <a class="menu-link" href="#"><span>Zhukov Yuriy</span></a>
             </div>
             <div class="section-1-content">
-                <div class="section-1-text-1"> <span>СОЗДАМ САЙТ ДЛЯ ВАС И ВАШЕГО БИЗНЕСА</span></div>
+                <div class="section-1-text-1"> <span>РАЗРАБОТКА САЙТА ДЛЯ ВАС И ВАШЕГО БИЗНЕСА</span></div>
                 <div class="section-1-text-2"> <span> Zhukov Yuriy</span></div>
-                <div class="section-1-text-3">Разработка сайтов</div>
+                <div class="section-1-text-3">Web-development</div>
             </div>
         </div>
     </section>
 
     <section class="section-2">
         <div class="section-2-content">
-            <h2 class="section-2-h2">ЧЕМ Я ЗАНИМАЮСЬ?</h2>
+            <h2 class="section-2-h2">ПРОЦЕСС РАЗРАБОТКИ</h2>
 
             <div class="section-2-blocks">
                 <div class="section-2-block">
@@ -69,7 +69,7 @@
             <h1 class="section-3-title-h1">ПРИМЕРЫ РАБОТ</h1>
         </div>
         <div class="section-3-blocks-1">
-            <div class="section-3-blocks">
+            <!-- <div class="section-3-blocks">
                 <div class="section-3-block-solo">
                     <img src="./img/section-01.png" alt="" class="section-3-img">
                     <div class="block-solo-text">
@@ -84,9 +84,24 @@
                         </a>
                     </div>
                 </div>
+            </div> -->
+
+            <div class="section-3-blocks">
+                <div class="section-3-block-solo">
+                    <img src="./img/staytrendy.png" alt="" class="section-3-img">
+                    <div class="block-solo-text">
+                        <h2 class="block-solo-h2">Staytrendy</h2>
+                        <p class="block-solo-p">
+                            Сайт-визитка для магазина обуви с формой обратной связи. Выполнен адаптив под мобильные устройства, а также якоря, прикрепленные к меню.
+                        </p>
+                        <a href="https://zhukov531.github.io/staytrandy/index.html">
+                        <button class="block-solo-btn">Перейти</button>
+                        </a>
+                    </div>
+                </div>
             </div>
 
-            <!-- <div class="section-3-blocks">
+            <div class="section-3-blocks">
                 <div class="section-3-block-solo">
                     <img src="./img/light.png" alt="" class="section-3-img">
                     <div class="block-solo-text">
@@ -101,8 +116,22 @@
                         </a>
                     </div>
                 </div>
-            </div> -->
-<!-- 
+            </div>
+            <div class="section-3-blocks">
+                <div class="section-3-block-solo">
+                    <img src="./img/portfolio_card.png" alt="" class="section-3-img">
+                    <div class="block-solo-text">
+                        <h2 class="block-solo-h2">Portfolio</h2>
+                        <p class="block-solo-p">
+                            Мини портфолио в виде карточки со ссылками на социальные сети и мессенджеры.
+                        </p>
+                        <a href="https://zhukov531.github.io/tesla/">
+                        <button class="block-solo-btn">Перейти</button>
+                        </a>
+                    </div>
+                </div>
+            </div>
+
             <div class="section-3-blocks">
                 <div class="section-3-block-solo">
                     <img src="./img/section-3.png" alt="" class="section-3-img">
@@ -119,7 +148,7 @@
                         </a>
                     </div>
                 </div>
-            </div> -->
+            </div>
 
             <div class="section-3-blocks">
                 <div class="section-3-block-solo">
@@ -139,6 +168,17 @@
         </div>
     </div>
 </section>
+
+    <!-- <section class="contacts">
+        <div class="contact_content">
+            <h2 class="contact_h2">
+                КОНТАКТЫ
+            </h2>
+
+        </div>
+    </section> -->
+
+
 
     <footer class="footer">
         <div class="footer-content">
