--- a/index.html
+++ b/index.html
@@ -88,7 +88,9 @@
 
             <div class="section-3-blocks">
                 <div class="section-3-block-solo">
+                    <a href="https://zhukov531.github.io/staytrandy/index.html" class="link_on_site">
                     <img src="./img/staytrendy.png" alt="" class="section-3-img">
+                    </a>
                     <div class="block-solo-text">
                         <h2 class="block-solo-h2">Staytrendy</h2>
                         <p class="block-solo-p">
@@ -103,7 +105,9 @@
 
             <div class="section-3-blocks">
                 <div class="section-3-block-solo">
+                    <a href="https://zhukov531.github.io/light/" class="link_on_site">
                     <img src="./img/light.png" alt="" class="section-3-img">
+                    </a>
                     <div class="block-solo-text">
                         <h2 class="block-solo-h2">Light</h2>
                         <p class="block-solo-p">
@@ -119,7 +123,9 @@
             </div>
             <div class="section-3-blocks">
                 <div class="section-3-block-solo">
+                    <a href="https://zhukov531.github.io/tesla/" class="link_on_site">
                     <img src="./img/portfolio_card.png" alt="" class="section-3-img">
+                    </a>
                     <div class="block-solo-text">
                         <h2 class="block-solo-h2">Portfolio</h2>
                         <p class="block-solo-p">
@@ -134,7 +140,9 @@
 
             <div class="section-3-blocks">
                 <div class="section-3-block-solo">
+                    <a href="https://zhukov531.github.io/LaslesVPN/" class="link_on_site">
                     <img src="./img/section-3.png" alt="" class="section-3-img">
+                    </a>
                     <div class="block-solo-text">
                         <h2 class="block-solo-h2">LaslesVPN</h2>
                         <p class="block-solo-p">
@@ -152,7 +160,9 @@
 
             <div class="section-3-blocks">
                 <div class="section-3-block-solo">
+                    <a href="https://zhukov531.github.io/LIDER/" class="link_on_site">
                     <img src="./img/lider.png" alt="" class="section-3-img">
+                    </a>
                     <div class="block-solo-text">
                         <h2 class="block-solo-h2">Техосмотр Николино</h2>
                         <p class="block-solo-p">
@@ -183,19 +193,26 @@
     <footer class="footer">
         <div class="footer-content">
             <div class="footer-links">
-                <div class="links1">
+                <!-- <div class="links1">
                     <a target="_ blank" href="https://wa.me/79529712118" class="footer-img"><img src="./img/Iconly/Iconwa.png" alt=""></a>
                     <a target="_ blank" href="https://www.behance.net/zhukov_yuriy" class="footer-img"><img src="./img/Iconly/Groupbe.png" alt=""></a>
                     <a target="_ blank" href="https://www.instagram.com/zhukoff_yuriy/" class="footer-img"><img src="./img/Iconly/ic24-instagram.png" alt=""></a>
-                </div>
+                </div> -->
+
                 <div class="links2">
+                    <a href="#" class="footer-img">
+                        <h3 class="footer-name">ZHUKOV YURIY</h3>
+                    </a>
+                    <a target="_ blank" href="https://t.me/tesla_03" class="footer-img">
+                        <img src="./img/Iconly/Icontg.png" alt="">
+                    </a>
+                </div>
                     
-                    <a href="#" class="footer-img"><h3 class="footer-name">ZHUKOV YURIY</h3></a></div>
-                <div class="links3">
+                <!-- <div class="links3">
                     <a target="_ blank" href="https://twitter.com/zhukov_develop" class="footer-img"><img src="./img/Iconly/Icontw.png" alt=""></a>
                     <a target="_ blank" href="https://vk.com/zhukov531" class="footer-img"><img src="./img/Iconly/Iconvk.png" alt=""></a>
-                    <a target="_ blank" href="https://t.me/zhkv_yuriy" class="footer-img"><img src="./img/Iconly/Icontg.png" alt=""></a>
-                </div>
+                    <a target="_ blank" href="https://t.me/tesla_03" class="footer-img"><img src="./img/Iconly/Icontg.png" alt=""></a>
+                </div> -->
             </div>
         </div>
     </footer>
